Corrected the CSS line height of compact lists (it should not be different than for non-compact lists; compact should only affect spacing between items).  Also corrected the CSS top margin for nested lists; extra top margin is desired for a top-level list, but not when nesting them, due to the resulting inconsistency in vertical spacing between items.  - Legacy-Id: 3715

--- a/cli/xml2rfc/data/xml2rfc.css
+++ b/cli/xml2rfc/data/xml2rfc.css
@@ -1090,6 +1090,21 @@ section .olCompact {
 tt, code {
   background-color: transparent;
 }
-p tt, p code {
-  background-color: #f9f9f9;
+p tt, p code, li tt, li code {
+  background-color: #f8f8f8;
+}
+/* Tweak the pre margin -- 0px doesn't come out well */
+pre {
+   margin-top: 0.5px;
+}
+/* Tweak the comact list text */
+ul.compact, .ulCompact,
+ol.compact, .olCompact {
+  line-height: normal;
+}
+/* Don't add top margin for nested lists */
+li > ul, li > ol, li > dl,
+dd > ul, dd > ol, dd > dl,
+dl > dd > dl {
+  margin-top: initial;
 }
